[package]
name = "maligog-gltf"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maligog = { path = "../maligog" }
gltf = "0.16"
log = "0.4"
image = "0.23"
bytemuck = "1.5"
glam = "0.15"


[dev-dependencies]
dotenv = "0.15.0"
env_logger = "0.8.3"


[profile.test]
opt-level = 3