[package]
name = "maligog-gltf"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maligog = { path = "../maligog" }
gltf = "0.16"
log = "0.4"
image = "0.23"
bytemuck = { version = "1.7", features = ["derive"] }
glam = { version = "0.16", features = ["bytemuck"] }


[dev-dependencies]
dotenv = "0.15.0"
env_logger = "0.8.3"


[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3
